 - a warning is displayed if the extended memory block where Jemm386 will
   reside is beyond the 16MB limit.
 - strategy to realloc an EMB to increase its size has been changed and is
   now smart enough to check if the block can be increased without moving
   it.
 - UMBM no longer requires the /I parameter; it will scan for blocks with
   the UMBPCI signature.
 - new option /XBDA for UMBM implemented.
 - MOVEXBDA has got option /A to make it align the new XBDA to a kB boundary.
 - tool CPUSTAT split into CPUSTAT and CPUID.
 - emulation of Int 15h, ah=87 (move extended memory) has been enhanced
   to allow to access physical memory beyond the 4 GB border via PSE-36.
 - JemmEx XMM now implements XMS v3.5 (extended memory > 4 GB). Default XMS
   handles changed to 48 (previously 32). Added JemmExL.exe, still supporting
   XMS v3.0 only. 
 - JemmEx: return DX=0 if XMS alloc functions fail (XMS spec).
 - option I=TEST does now indeed what's documented. Previously it only
   scanned regions of "external" ROMs ( i.e., the ROM of the VGA card ).
   This means it's more "aggressive" now.

 02/02/2020: v5.79
 - if physical address of DMA buffer was beyond 16M, its size was reset
   to zero. This is no longer done.
 - default linker is now JWlink.
 - debug displays added for mode switch calls.
 - Jemm will now use info returned by Int 15h, ax=E820h to mark regions
   in the upper memory area as reserved. If the call was successful,
   Jemm won't scan the memory region C000-EFFF for RAM.
 - VME (virtual mode extensions) is now off by default; there exist CPUs
   that claim to support VME but actually don't.
 - JemmEx's built-in XMS host will now use up to 8 memory blocks listed
   by ACPI (int 0x15, ax=0xe820). Previously it could just use the one
   with base address 0x100000. 
 - fixed: shrinking an EMB didn't work correctly.

 07/15/2012: v5.78

 - bugfix: if SPLIT option was set and there were 2 ROMs to be split on